Simplify API to single toCSS() method with optional stats property
- Removed generateCSS() method entirely to eliminate API confusion
- toCSS() now handles all functionality: returns CSS string and stores detailed stats
- Added this.stats property to store optional detailed results from last conversion
- Updated example-ui.html to maintain compatibility by accessing this.stats
- Updated README to show optional stats access pattern
- Clean API: simple toCSS() call for most users, optional stats for advanced use

API is now: const css = await converter.toCSS(); // converter.stats available if needed

--- a/src/example-ui.html
+++ b/src/example-ui.html
@@ -757,7 +757,13 @@
 
             // Delegate to core for CSS generation
             async generateCSS(imageSource, options = {}) {
-                return await this.core.generateCSS(imageSource, options);
+                // Update core config with options first
+                Object.assign(this.core.config, options);
+                this.core.config.source = imageSource;
+                
+                // Generate CSS and return full result object for UI compatibility
+                const css = await this.core.toCSS();
+                return this.core.stats; // Return the detailed stats the UI expects
             }
 
             // Get imageData property from core
