Replace className with selector parameter for flexible CSS selector support
- Added selector parameter supporting any CSS selector (.class, #id, complex selectors)
- Maintained backward compatibility with className parameter (deprecated)
- Updated all documentation and examples to use new selector parameter
- Enhanced API flexibility for dynamic styling use cases

--- a/src/example-ui.html
+++ b/src/example-ui.html
@@ -1189,7 +1189,7 @@ input:checked + .slider:before {
                 
                 try {
                     // Update the core config with current settings
-                    this.core.config.className = 'slick-img-gradient';
+                    this.core.config.selector = '.slick-img-gradient';
                     this.core.config.processing.details = details;
                     this.core.config.processing.compression = compression;
                     this.core.config.processing.mode = processingMode;
