--- a/src/example-ui.html
+++ b/src/example-ui.html
@@ -1096,12 +1096,15 @@ input:checked + .slider:before {
                                         const outR = document.getElementById('roughCssCode'); if (outR) outR.textContent = css;
                                         // Also use roughness as specularity CSS
                                         const outSpec = document.getElementById('specCssCode'); if (outSpec) outSpec.textContent = css;
-                                        // Update CSS-lighting masks
+                                        // Update CSS-lighting mask only if not already set to a dataURL image
                                         const bg = self.extractBackgroundFromCSS(css);
                                         const gp = document.getElementById('gradientPreview');
                                         if (bg && gp) {
-                                            gp.style.setProperty('--spec-mask', bg);
-                                            gp.style.setProperty('--shadow-mask', bg);
+                                            const current = (gp.style.getPropertyValue('--spec-mask') || '').trim();
+                                            if (!current.startsWith('url(')) {
+                                                gp.style.setProperty('--spec-mask', bg);
+                                                gp.style.setProperty('--shadow-mask', bg);
+                                            }
                                         }
                                     } else if (type === 'subjectnormal') {
                                         self.updateSubjectNormalGradientClass(css);
@@ -1127,6 +1130,15 @@ input:checked + .slider:before {
                                         const img = document.getElementById(imgId);
                                         if (img && dataURL) {
                                             img.src = dataURL;
+                                        }
+                                    }
+                                    // Prefer exact pixel mask: use roughness dataURL as CSS mask image
+                                    if (type === 'roughness' && dataURL) {
+                                        const gp = document.getElementById('gradientPreview');
+                                        if (gp) {
+                                            const mask = 'url("' + dataURL + '") left top / 100% 100% no-repeat';
+                                            gp.style.setProperty('--spec-mask', mask);
+                                            gp.style.setProperty('--shadow-mask', mask);
                                         }
                                     }
                                 }
