--- a/src/example-ui.html
+++ b/src/example-ui.html
@@ -154,13 +154,14 @@ input[type="file"] {
   /* Fixed highlight gradient, masked by roughness-derived spec mask */
   background: linear-gradient(
     var(--light-angle, 35deg),
-    rgba(255,255,255, var(--highlight-alpha, 0.75)) 0%,
-    rgba(255,255,255, 0.0) 60%
+    var(--highlight-color, #ffffff) 0%,
+    transparent 60%
   );
   /* Make lighting fixed to viewport so scroll changes interaction */
   background-attachment: fixed;
   /* Show highlights as opaque white (masked) */
   mix-blend-mode: normal;
+  opacity: var(--highlight-alpha, 0.75);
   /* Use generated specularity mask (via Roughness). Accept full shorthand (image pos/size/repeat). */
   -webkit-mask: var(--spec-mask);
   mask: var(--spec-mask);
@@ -176,6 +177,7 @@ input[type="file"] {
   background-attachment: fixed;
   /* Show shadows as opaque black (masked) */
   mix-blend-mode: normal;
+  opacity: var(--shadow-alpha, 0.35);
   -webkit-mask: var(--shadow-mask, var(--spec-mask));
   mask: var(--shadow-mask, var(--spec-mask));
   mask-mode: luminance;
@@ -797,7 +799,7 @@ input:checked + .slider:before {
           <div class="light-badges" id="lightBadges">
             <span class="badge" id="badgeAngle">Angle: 35°</span>
             <span class="badge" id="badgeHighlight">H: 75%</span>
-            <span class="badge" id="badgeShadow">S: 35%</span>
+            <span class="badge" id="badgeShadow">S: 0%</span>
           </div>
         </div>
 
@@ -816,8 +818,13 @@ input:checked + .slider:before {
           </div>
 
           <div class="control-row" style="margin-top:6px;">
-            <label for="shadowIntensitySlider">Shadow intensity: <span id="shadowIntensityValue">35%</span></label>
-            <input type="range" id="shadowIntensitySlider" min="0" max="100" value="35" step="1" style="width:100%;">
+            <label for="shadowIntensitySlider">Shadow intensity: <span id="shadowIntensityValue">0%</span></label>
+            <input type="range" id="shadowIntensitySlider" min="0" max="100" value="0" step="1" style="width:100%;">
+          </div>
+
+          <div class="control-row" style="margin-top:6px;">
+            <label for="highlightColorPicker">Lighting color:</label>
+            <input type="color" id="highlightColorPicker" value="#ffffff" style="width:100%; height:32px; padding:0; border:none; background:transparent;">
           </div>
 
           <div class="control-row" style="margin-top:6px;">
@@ -1252,6 +1259,7 @@ input:checked + .slider:before {
                 const intensityValue = document.getElementById('highlightIntensityValue');
                 const shadowSlider = document.getElementById('shadowIntensitySlider');
                 const shadowValue = document.getElementById('shadowIntensityValue');
+                const colorPicker = document.getElementById('highlightColorPicker');
                 const previewEl = document.getElementById('gradientPreview');
                 const badgeAngle = document.getElementById('badgeAngle');
                 const badgeHighlight = document.getElementById('badgeHighlight');
@@ -1290,6 +1298,14 @@ input:checked + .slider:before {
                     };
                     shadowSlider.addEventListener('input', updateShadow);
                     updateShadow();
+                }
+                if (colorPicker && previewEl) {
+                    const updateColor = () => {
+                        const val = colorPicker.value || '#ffffff';
+                        previewEl.style.setProperty('--highlight-color', val);
+                    };
+                    colorPicker.addEventListener('input', updateColor);
+                    updateColor();
                 }
                 const specDl = document.getElementById('specDownloadBtn');
                 if (specDl) specDl.addEventListener('click', () => this.downloadMapCSS('specular'));
